--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+*.exe
+*.obj
+*.pdb
+*.ilk
 build/ALL_BUILD.vcxproj
 build/ALL_BUILD.vcxproj.filters
 build/cmake_install.cmake
@@ -1688,3 +1692,30 @@ Problem/LinkedList/vcpkg_installed/x64-windows/src/gtest-printers.cc
 Problem/LinkedList/vcpkg_installed/x64-windows/src/gtest-test-part.cc
 Problem/LinkedList/vcpkg_installed/x64-windows/src/gtest-typed-test.cc
 Problem/LinkedList/vcpkg_installed/x64-windows/src/gtest.cc
+build/.cmake/api/v1/reply/codemodel-v2-e5a6d61c480513bfb217.json
+build/.cmake/api/v1/reply/index-2024-05-30T17-18-52-0002.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Debug-1ffe3aaf20e27fecaecb.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Debug-6ce0bc8ecee631812456.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Debug-59199ba3ca3071f3f845.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Debug-bce21e852dc486c314f0.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-MinSizeRel-1ffe3aaf20e27fecaecb.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-MinSizeRel-6ce0bc8ecee631812456.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-MinSizeRel-59199ba3ca3071f3f845.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-MinSizeRel-bce21e852dc486c314f0.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Release-1ffe3aaf20e27fecaecb.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Release-6ce0bc8ecee631812456.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Release-59199ba3ca3071f3f845.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-Release-bce21e852dc486c314f0.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-RelWithDebInfo-1ffe3aaf20e27fecaecb.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-RelWithDebInfo-6ce0bc8ecee631812456.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-RelWithDebInfo-59199ba3ca3071f3f845.json
+build/.cmake/api/v1/reply/target-ALL_BUILD-RelWithDebInfo-bce21e852dc486c314f0.json
+build/.cmake/api/v1/reply/target-gtest_main-Debug-d0642689fc291c7de140.json
+build/.cmake/api/v1/reply/target-gtest_main-MinSizeRel-64b5a91d56e3211f7043.json
+build/.cmake/api/v1/reply/target-gtest_main-Release-ed4e43a24ba9334e7660.json
+build/.cmake/api/v1/reply/target-gtest_main-RelWithDebInfo-5310633e7e37364a131e.json
+build/.cmake/api/v1/reply/target-LinkedListTests-Debug-7cde941ee62c62652857.json
+build/.cmake/api/v1/reply/target-LinkedListTests-MinSizeRel-b38039d20c5d8223182b.json
+build/.cmake/api/v1/reply/target-LinkedListTests-Release-11b88ca3d9d4d5e79921.json
+build/.cmake/api/v1/reply/target-LinkedListTests-RelWithDebInfo-9cbf07f6baca36df2e8d.json
+Problem/array/array1.exe
